# CurrentDao-contracts

./: .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  EnergyOptionsContract.md  GasOptimizationSuite.md  GridBalancingContract.md  NOTIFICATION_QUICK_REFERENCE.md  NOTIFICATION_SYSTEM_SUMMARY.md  OracleAggregator.md  README.md  TYPESCRIPT_JEST_FIX.md  jest.config.js  package-lock.json  package.json  tsconfig.json
contracts/ai/: AIOptimization.test.ts  AIOptimization.ts
contracts/aml/: AntiMoneyLaundering.ts
contracts/bridge/: MultiCurrencyBridge.test.ts  MultiCurrencyBridge.ts
contracts/carbon/: Cargo.toml
contracts/certificates/: Cargo.toml  EnergyCertificateRegistry.test.ts  EnergyCertificateRegistry.ts
contracts/compliance/: Cargo.toml  InternationalCompliance.test.ts  InternationalCompliance.ts
contracts/escrow/: Cargo.toml  EnergyEscrow.test.ts  EnergyEscrow.ts
contracts/fees/: Cargo.toml
contracts/governance/: AdvancedGovernance.test.ts  AdvancedGovernance.ts
contracts/liquidity/: Cargo.toml
contracts/microgrid/: MicrogridManagement.test.ts  MicrogridManagement.ts
contracts/migration/: EmergencyMigration.ts
contracts/multisig/: AdvancedMultiSig.ts
contracts/nft/: Cargo.toml
contracts/notification/: NotificationManager.ts  README.md  index.ts
contracts/oracles/: Cargo.toml
contracts/pricing/: DynamicPricing.test.ts  DynamicPricing.ts
contracts/proposals/: Cargo.toml
contracts/reporting/: Cargo.toml  RegulatoryReporting.test.ts  (+1 more)
docs/: CONTRACTS.md
scripts/: deploy_advanced_multisig.ts  deploy_aml.ts  deploy_emergency_migration.ts
(+83 files in other folders)
