[workspace]
members = [
    "contracts/token",
    "contracts/dao",
    "contracts/carbon",
    "contracts/staking",
    "contracts/escrow",
    "contracts/oracles",
    "contracts/liquidity",
    "contracts/settlement",
    "contracts/fees",
    "contracts/certificates",
    "contracts/compliance",
    "contracts/proposals",
    "contracts/nft",
    "contracts/reporting",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "25.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
